--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "best_market_ever",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "Online market where you can buy imaginary wood, iron and oil",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js"
+    "client": "npm run start --prefix client",
+    "server": "nodemon index.js",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +28,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "passport": "^0.4.0",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
