--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
+    "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
     "react": "^16.12.0",
