--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
