--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.0.0",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.1"
   }
 }
