--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "3.3.0",
     "react-toastify": "^5.4.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "typeface-roboto": "^0.0.75"
   },
   "scripts": {
