--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "express-jwt": "^5.3.1",
     "express-session": "^1.17.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.0",
