--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@reduxjs/toolkit": "^1.1.0",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
+    "idb": "^4.0.5",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
